MapView class. Pan almost works.

--- a/index.html
+++ b/index.html
@@ -13,90 +13,8 @@
         <button type="submit">Get</button>
     </form>
 
-    <canvas width="128" height="128"></canvas>
+    <canvas width="512" height="256"></canvas>
 
-    <script>
-        $(document).ready(function() {
-            var ws = new WebSocket('ws://localhost:7631', 'super-dumb-proto'),
-                $msg = $('#msg'),
-                $ta = $('textarea'),
-                gres = 128;
-
-            ws.binaryType = 'arraybuffer';
-            ws.onmessage = function(msg) {
-                //$msg.text(msg.data);
-                console.log(msg.data.byteLength);
-                console.log(msg.data);
-
-                var hdr = String.fromCharCode.apply(null, new Uint8Array(msg.data, 0, 16)).trim();
-                if (hdr === 'SUCCESS') {
-                    var arr, imgData, ctx, i, j;
-                    console.log(hdr);
-                    //var arr = new Float32Array(msg.data, 16); //, msg.data.byteLength - 16);
-                    arr = new Uint8Array(msg.data, 16); //, msg.data.byteLength - 16);
-
-                    var e = $('canvas');
-                    console.log(e);
-                    ctx = $('canvas').get(0).getContext('2d');
-                    imgData = ctx.getImageData(0, 0, gres, gres);
-
-                    for (i = 0; i < gres*gres; i++) {
-                        for (j = 0; j < 3; j++) {
-                            imgData.data[4*i + j] = arr[i];
-                            //console.log(arr[i]);
-                        }
-                        imgData.data[4*i + 3] = 255;
-                    }
-
-                    ctx.putImageData(imgData, 0, 0);
-                }
-                //for (var i = 0; i < 20; i++)
-                //    console.log(arr[i]);
-            };
-
-            ws.onerror = function(err) {
-                console.log(err);
-            };
-
-            $('form').on('submit', function(ev) {
-                console.log('sending...');
-                var msg = {
-                        type: 'shade',
-                        bounds: {
-                            format: 'NWwh',
-                            values: [null, null, null, null]
-                        },
-                        resolution: gres
-                    },
-                    bounds = msg.bounds,
-                    bvals = bounds.values,
-                    form;
-
-
-                form = $(this).serializeArray();
-                $.each(form, function(index, input) {
-                    switch (input.name) {
-                    case 'north':
-                        bvals[0] = parseFloat(input.value);
-                        break;
-                    case 'west':
-                        bvals[1] = parseFloat(input.value);
-                        break;
-                    case 'wh':
-                        bvals[2] = bvals[3] = parseFloat(input.value);
-                        break;
-                    case 'res':
-                        msg.resolution = parseInt(input.value);
-                        break;
-                    }
-                });
-
-                ev.preventDefault();
-                //$msg.text(JSON.stringify(msg));
-                ws.send(JSON.stringify(msg));
-            });
-
-        });
-    </script>
+    <script src="/main.js"></script>
 </body>
 </html>
